--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
@@ -38,6 +39,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.17.0",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "vitest": "^0.34.6",
