As Backen-side, after uploding an image, save Cloudflare images and validate

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:@localhost:3306/diarygpt_db?schema=public"
+CLOUDFLARE_ACCOUNT_ID="3b29798cc9ff51973f4e4b1113838650"
+CLOUDFLARE_IMAGES_API_TOKEN="B6i9OaaOPyYCsW-eORO5zpy72N-6nYTchk1cgQUJ"
