--- a/backend/package.json
+++ b/backend/package.json
@@ -21,12 +21,16 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.2.10",
     "@prisma/client": "^5.5.2",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
@@ -42,6 +46,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "form-data": "^4.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "prisma": "^5.5.2",
