--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "react-hook-form": "^7.48.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.17.0",
+    "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "tailwind-merge": "^2.0.0",
