--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "cd frontend && yarn dev",
     "build": "cd frontend && yarn build",
     "server": "cd backend && yarn start",
-    "server:watch": "cd backend && yarn start:dev"
+    "server:watch": "cd backend && yarn start:dev",
+    "studio": "cd backend && yarn prisma studio"
   }
 }
