--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,5 @@
 DATABASE_URL="mysql://root:@localhost:3306/diarygpt_db?schema=public"
 CLOUDFLARE_ACCOUNT_ID="3b29798cc9ff51973f4e4b1113838650"
 CLOUDFLARE_IMAGES_API_TOKEN="B6i9OaaOPyYCsW-eORO5zpy72N-6nYTchk1cgQUJ"
+OPENAI_API_KEY="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"
+GEMINI_API_KEY="AIzaSyC1gqkyyVlTACwfCaHDar94nwReSqTX9s8"
