--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-query": "^3.39.3",
+    "react-resizable-panels": "^1.0.9",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
